# LearningProgramming

./: README.md
C/pico2W/blink/: CMakeCache.txt  CMakeLists.txt  Makefile  blink.dis  blink.elf  blink.elf.map  blink.hex  blink.uf2  cmake_install.cmake  hellow.c
C/pico2W/blink/pico-sdk/: Makefile  cmake_install.cmake
C/pico2W/blink/pico-sdk/docs/: Makefile  cmake_install.cmake
C/pico2W/blink/pico-sdk/src/: Makefile  cmake_install.cmake
C/pico2W/blink/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
C/pico2W/blink/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
C/pico2W/blink/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
C/pico2W/blink/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
C/pico2W/blink/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
C/pico2W/blink/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
C/pico2W/blink/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
C/pico2W/blink/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
C/pico2W/blink/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
C/pico2W/blink/pico-sdk/src/common/pico_sync/: Makefile  (+1 more)
C/pico2W/blink/pico-sdk/tools/: Makefile  cmake_install.cmake
C/pico2W/blink/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
C/pico2W/blink/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
C/pico2W/blinkLights/: CMakeCache.txt  CMakeLists.txt  main.c
(+864 files in other folders)
